# charset-normalizer-rs

./: .cargoignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  wrong_charset.md
.github/workflows/: cd.yml  ci.yml
benches/: large_datasets.rs  large_payload.rs
src/: assets.rs  cd.rs  constant.rs  consts.rs  enc.rs  entity.rs  lib.rs  md.rs  normalizer.rs  performance.rs  utils.rs
src/md/: plugins.rs  structs.rs
src/tests/: cd.rs  detection_base.rs  detection_edge_case.rs  detection_full.rs  detection_large_payload.rs  entity.rs  md.rs  mod.rs  utils.rs
src/tests/data/samples/: sample-polish.txt
tests/: normalizer.rs
