[package]
name = "charset-normalizer-rs"
version = "1.0.5"
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
edition = "2021"
description = "Truly universal encoding detector in pure Rust - port of Python version"
license-file = "LICENSE"
documentation = "https://docs.rs/charset-normalizer-rs"
readme = "README.md"
repository = "https://github.com/nickspring/charset-normalizer-rs"
keywords = ["encoding", "charset", "detector", "conversion", "normalizer"]
categories = ["encoding", "internationalization", "localization"]
exclude = [
    "/src/tests/data/**",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/.github/**",
    ".gitattributes"
]

[dependencies]
blake3 = "1.4.1"
cache-macro-stable-rust = "0.4.1"
chardet = { version = "0.2.4", optional = true }
chardetng = { version = "0.1.17", optional = true }
clap = { version = "4.4.2", features = ["derive"] }
counter = "0.5.7"
dialoguer = "0.10.4"
encoding = "0.2.33"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
lru-cache = "0.1.2"
maplit = "1.0.2"
ordered-float = "3.9.1"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strsim = "0.10.0"
unic = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.3"
predicates = "3.0.3"

[[bench]]
name = "large_payload"
harness = false

[[bench]]
name = "large_datasets"
harness = false

[features]
performance = ["chardet", "chardetng"]

[[bin]]
name = "performance"
path = "src/performance.rs"
required-features = ["performance"]

[[bin]]
name = "normalizer"
path = "src/normalizer.rs"
