[package]
name = "charset-normalizer-rs"
version = "1.0.6"
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
edition = "2021"
description = "Truly universal encoding detector in pure Rust - port of Python version"
license-file = "LICENSE"
documentation = "https://docs.rs/charset-normalizer-rs"
readme = "README.md"
repository = "https://github.com/nickspring/charset-normalizer-rs"
keywords = ["encoding", "charset", "detector", "conversion", "normalizer"]
categories = ["encoding", "internationalization", "localization"]
exclude = [
    "/src/tests/data/**",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/.github/**",
    ".gitattributes"
]

[dependencies]
ahash = "0.8.3"
bitflags = "2.4.0"
cached = "0.46.0"
chardet = { version = "0.2.4", optional = true }
chardetng = { version = "0.1.17", optional = true }
clap = { version = "4.4.2", features = ["derive"] }
counter = "0.5.7"
dialoguer = "0.10.4"
encoding = "0.2.33"
env_logger = "0.10.0"
icu_normalizer = "1.3.2"
icu_properties = "1.3.2"
log = "0.4.20"
once_cell = "1.18.0"
ordered-float = "3.9.1"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strsim = "0.10.0"
unicode_names2 = "1.1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.3"
predicates = "3.0.3"

[[bench]]
name = "large_payload"
harness = false

[[bench]]
name = "large_datasets"
harness = false

[features]
performance = ["chardet", "chardetng"]

[[bin]]
name = "performance"
path = "src/performance.rs"
required-features = ["performance"]

[[bin]]
name = "normalizer"
path = "src/normalizer.rs"

[profile.release]
opt-level = 3
lto = "fat"
