[package]
name = "charset-normalizer-rs"
version = "1.1.0"
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
edition = "2021"
description = "Truly universal encoding detector in pure Rust - port of Python version"
license-file = "LICENSE"
documentation = "https://docs.rs/charset-normalizer-rs"
readme = "README.md"
repository = "https://github.com/nickspring/charset-normalizer-rs"
keywords = ["encoding", "charset", "detector", "conversion", "normalizer"]
categories = ["encoding", "internationalization", "localization"]
exclude = [
    "/src/tests/data/**",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/.github/**",
    ".gitattributes"
]

[dependencies]
ahash = "0.8.3"
bitflags = "2.9.0"
cached = "0.56.0"
chardet = { version = "0.2.4", optional = true }
chardetng = { version = "0.1.17", optional = true }
clap = { version = "4.4.2", features = ["derive"], optional = true}
counter = "0.7.0"
dialoguer = { version = "0.10.4", optional = true }
encoding = "0.2.33"
env_logger = { version = "0.11.0", optional = true }
icu_normalizer = "1.3.2"
icu_properties = "1.3.2"
log = "0.4.20"
once_cell = "1.21.0"
ordered-float = "3.9.1"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strsim = "0.11.0"
unicode_names2 = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.3"
predicates = "3.0.3"

[[bench]]
name = "large_payload"
harness = false

[[bench]]
name = "large_datasets"
harness = false

[features]
cli = ["clap", "dialoguer", "env_logger"]
performance = ["chardet", "chardetng", "cli"]

[[bin]]
name = "performance"
path = "src/performance.rs"
required-features = ["performance"]

[[bin]]
name = "normalizer"
path = "src/normalizer.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = "fat"
